# biothings_annotator

./: .gitignore  Caddyfile  README.md  docker-compose.yml  pyproject.toml  supervisord.conf
.github/workflows/: biothings_annotator_tests.yml
applications/: sanic_application.py  sanic_handlers.py  tornado.py  tornado_application.py
applications/configuration/: sanic.json  tornado.json
biothings_annotator/: __init__.py  __main__.py  annotator.py  biolink.py  transformer.py  utility.py
biothings_annotator/annotator/: __init__.py  annotator.py  elasticsearch.py  exceptions.py  settings.py  transformer.py  utils.py
biothings_annotator/application/: __init__.py  launcher.py  metadata.py  sanic.py  structure.py  telemetry.py
biothings_annotator/application/cli/: arguments.py  interface.py  target.py
biothings_annotator/application/configuration/: default.json  openapi.json  prod.json  sanic.json
biothings_annotator/application/exceptions/: __init__.py  definitions.py  handlers.py
biothings_annotator/application/handlers/sanic/: annotator.py
biothings_annotator/application/listeners/: __init__.py  sentry.py
biothings_annotator/application/middleware/: __init__.py  compression.py
biothings_annotator/application/static/: __init__.py  views.py
biothings_annotator/application/swagger/: webpack.config.js
biothings_annotator/application/telemetry/: __init__.py
biothings_annotator/application/views/: __init__.py  annotator.py  cache.py  curie.py  default.py  legacy.py  metadata.py  status.py  trapi.py
biothings_annotator/cache/: caching.py
biothings_annotator/frontend/: package-lock.json
biothings_annotator/handlers/: __init__.py  sanic_handlers.py  tornado_handlers.py
biothings_annotator/handlers/sanic/: annotator.py
biothings_annotator/handlers/tornado/: annotator.py
biothings_annotator/web-app/: index.html
biothings_annotator/webapp/: index.html  openapi.json  swagger_dist.py
deploy/: Chart.yaml  Jenkinsfile  deploy.sh  values.yaml
deploy/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
docker/: Dockerfile
docker/configuration/: Caddyfile  config.json  supervisord.conf
src/biothings_annotator/: __init__.py
src/biothings_annotator/annotator/: settings.py  transformer.py
src/biothings_annotator/application/: launcher.py  structure.py
src/biothings_annotator/application/configuration/: default.json
src/biothings_annotator/application/exceptions/: handlers.py
src/biothings_annotator/application/static/: __init__.py
src/biothings_annotator/application/views/: __init__.py  status.py
tests/: conftest.py  test_annotation_performance.py  test_application.py  test_application_configuration.py  test_application_endpoints.py  test_backend_parity.py  test_compression.py  test_curie.py  test_elasticsearch.py  test_metadata.py  test_openapi.py  test_query.py  test_routing_errors.py  test_server_performance.py  test_settings.py  test_telemetry.py  test_transformer.py  test_trapi.py
tests/data/: bulk_post.json  cleaned_annotator_logs.json  expected_curie.json  trapi_request.json  trapi_response.json
tests/data/ara/: ara-improving_annotator_nodes.json  ara-unsecret_annotator_nodes.json
tests/data/query/: CHEBI:7507.json  CHEMBL.COMPOUND:7.json  DRUGBANK:2245.json  ENSEMBL:1411.json  INCHIKEY:9662.json  NCBIGene:1081.json  PUBCHEM.COMPOUND:901.json  UNII:6649.json  UniProtKB:1318.json
tests/fixtures/: application.py  datastore.py
web-app/: api-frontend.html  package.json  swagger_dist.py
web-app/src/: index.js
