[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."] # list of folders that the contains the packages. We need it to be at root due to flat-layout
include = ["biothings_annotator*"]  # package names should match these glob patterns
exclude = ["tests*"]  # exclude packages matching these glob patterns
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[project]
name = "biothings_annotator"
version = "0.0.1"
authors = [
  { name="Chunlei Wu", email="cwu@scripps.edu" },
  { name="Johnathan Schaff", email="jschaff@scripps.edu" },
]
description = "Translator Annotation Service"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biothings_client >= 0.3.1",
    "sanic[ext] >= 23.12.1",
]

[project.optional-dependencies]
tests = [
    "pytest >= 8.1.1",
    "pytest-asyncio >= 0.23.8",
    "sanic-testing >= 24.6.0"
]


[project.urls]
"Homepage" = "https://github.com/biothings/biothings_annotator"


[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
)
'''

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 120
src_paths = ["."]
extend_skip = []


# pytest configuration
[tool.pytest.ini_options]
minversion = "6.2.5"
pythonpath = ["."]


# Options
addopts = [
    "-rA",
    "-vv",
    "--doctest-modules",
    "--setup-show",
    "--capture=no",
    "--tb=line",
    "--durations=0",
    "--showlocals",
    "--strict-markers",
    "--color=yes",
    "--code-highlight=yes"
]

# Path
norecursedirs = [
    ".svn",
    ".git",
    "_build",
    "tmp*",
    "lib",
    "lib64",
]
testpaths = ["test"]

markers = [
    "unit",
    "performance"
]

# Logging
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
